--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "beatmaps",
         "Beatmapset",
         "LOCALAPPDATA",
-        "novideo"
+        "novideo",
+        "Sayo"
     ]
 }
