--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,18 @@
     "cSpell.words": [
         "beatmaps",
         "Beatmapset",
+        "Doublepair",
+        "hitcircles",
         "LOCALAPPDATA",
+        "mapset",
+        "mapsets",
         "novideo",
-        "Sayo"
+        "osudb",
+        "playcount",
+        "Sayo",
+        "taiko",
+        "Timingpoint",
+        "timingpoints",
+        "uninherited"
     ]
 }
